css/style.css
/* ... */
.site-blocks-cover h1 {
    font-size: 3.5rem;
    font-weight: 400;
    color: #000;
    font-weight: 900;
}

.site-blocks-cover h3 {
    font-size: 1rem;
    font-weight: 400;
    color: #000;
    font-weight: 900;
}

@media (max-width: 991.98px) {
    .site-blocks-cover h1 {
        font-size: 2rem;
    }
}

.site-blocks-cover p {
    color: #202020;
    font-size: 1rem;
    font-weight: 300;
}

@media (max-width: 768px) {
    .site-blocks-cover p {
        color: #ffffff;
        font-size: 1rem;
        font-weight: 300;
    }
}

.site-blocks-cover .intro-text {
    font-size: 16px;
    line-height: 1.5;
}

@media (max-width: 991.98px) {
    .site-blocks-cover .display-1 {
        font-size: 3rem;
    }
}

/*
------------------------
    Clients Slide CSS
-----------------------
*/

.clients-outer {
    margin-top: 3.6rem;
    text-align: center;
    position: relative;
}

@media (max-width: 768px) {
    .clients-outer {
        text-align: center;
        position: relative;
    }
}

.clients__slide {
    display: block;
    opacity: .55;
    padding: 1.5rem 2.8rem;
    max-width: 50%;
    -webkit-transition: opacity 0.5s ease-in-out;
    transition: opacity 0.5s ease-in-out;
}

.clients__slide:hover,
.clients__slide:focus {
    opacity: 1;
}

.clients {
    overflow: hidden;
}

.blue-image {
    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(170deg) brightness(3%);
}

.client-image {
    width: 120px;
    height: auto;
}

.clients__slides {
    display: flex;
    animation: slide 60s linear infinite;
    margin-left: 1px;
}

@media (max-width: 768px) {
    .clients__slides {
        animation: slide 10s linear infinite;
    }
}

@keyframes slide {
    0% {
        transform: translateX(0);
    }
    
    100% {
        transform: translateX(-100%);
    }
}

@media (max-width: 768px) {
    .clients-outer {
        text-align: center;
        position: relative;
        margin-top: -2%;
    }
    
    .clients__slides {
        margin-left: 0;
    }
    
    .clients__slide {
        max-width: 100%;
    }
}

/*
------------------------
    About Me CSS
-----------------------
*/

#aboutme-section {
    padding-top: 8%;
}

@media (max-width: 768px) {
    #aboutme-section {
        padding-top: 20%;
    }
}

.btn_02 {
    display: inline-block;
    background-color: #E0013F;
    color: #fff;
    font-size: 16px;
    font-weight: 500;
    padding: 18px 28px;
    border-radius: 50px;
    transition: all 0.3s ease-in-out;
    text-transform: uppercase;
}

.btn_02:hover {
    background-color: #fff;
    color: #E0013F;
    border: 2px solid #E0013F;
}

.skill-ara {
    margin-top: 60px;
}

.single-skill {
    margin-bottom: 40px;
}

.progress-count p {
    color: #8f8f8f;
    font-size: 16px;
    margin-bottom: 0;
}

.progress {
    height: 6px;
    background-color: #e5e5e5;
    border-radius: 30px;
    overflow: hidden;
}

.progress-bar {
    background-color: #E0013F;
    height: 100%;
}

.col-xl-12 p {
    font-size: 18px;
    line-height: 1.8;
    color: #8f8f8f;
    margin-top: 60px;
}

/*
------------------------
    Services CSS
-----------------------
*/

@media (max-width: 767px) {
    #why-choose-us {
        display: none;
    }
    
    #services-cards {
        margin-top: -10px;
    }
}

#service-details {
    padding-bottom: 30px;
}

.unit-1 {
    position: relative;
    width: 100%;
    overflow: hidden;
    display: block;
}

.unit-1:after {
    content: "";
    z-index: 1;
    position: absolute;
    bottom: 0;
    top: 0;
    left: 0;
    right: 0;
    background: -moz-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
    background: -webkit-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(18%, transparent), color-stop(99%, rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8)));
    background: -o-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
    background: linear-gradient(to bottom, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#cc000000', GradientType=0);
}

.unit-1 img {
    -o-object-fit: cover;
    object-fit: cover;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
}

.unit-1 img,
.unit-1 .unit-1-text {
    -webkit-transition: .3s all ease-in-out;
    -o-transition: .3s all ease-in-out;
    transition: .3s all ease-in-out;
}

.unit-1 .unit-1-text {
    z-index: 2;
    position: absolute;
    bottom: -90px;
    color: #fff;
    display: block;
    width: 100%;
}

.unit-1 .unit-1-text .unit-1-heading {
    font-size: 1.5rem;
    position: relative;
}

.unit-1 p {
    opacity: 0;
    visibility: hidden;
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    color: rgba(255, 255, 255, 0.5);
}

.unit-1:hover p {
    opacity: 1;
    visibility: visible;
}

.unit-1:hover .unit-1-text {
    bottom: 30px;
}

.unit-1:hover img {
    -webkit-transform: scale(1.05);
    -ms-transform: scale(1.05);
    transform: scale(1.05);
}

.overlap-section {
    margin-top: -150px;
    position: relative;
    z-index: 9;
}

.unit-4 {
    padding: 30px;
    background: #f1f1f1;
    border-radius: 5px;
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    position: relative;
    top: 0;
    margin-bottom: 4em;
    text-align: center;
    padding-top: 50px;
}

.unit-4 .unit-4-icon {
    position: absolute;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    left: 50%;
    top: -50px;
}
/* ... */

